tests/neg/sort_error.ovt
sensor s : rate(int, (10, true));
actuator a : rate(int, (10, 0));
a = s;
